--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/t2"
         android:layout_height="wrap_content"
-        android:text="a2"
+        android:text="x = 6 ;"
         android:textSize="40sp"
         android:padding="16dp"
         android:textStyle="bold"
